test/compile_errors/err_issue366_safe_fn_raw_ptr_precondition.w
//! expect-error: safe function relies on caller-guaranteed raw pointer validity

fn read_first(p: *const i32) -> i32:
    unsafe *p
